--- a/package.json
+++ b/package.json
@@ -17,10 +17,14 @@
   "dependencies": {
     "gatsby": "^4.3.0",
     "gatsby-plugin-image": "^2.3.0",
+    "gatsby-plugin-manifest": "^4.3.0",
     "gatsby-plugin-sharp": "^4.3.0",
     "gatsby-source-filesystem": "^4.3.0",
     "gatsby-transformer-sharp": "^4.3.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
+  },
+  "devDependencies": {
+    "gatsby-plugin-favicons": "^2.0.0"
   }
 }
