--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "gatsby": "^4.3.0",
     "gatsby-plugin-image": "^2.3.0",
     "gatsby-plugin-manifest": "^4.3.0",
+    "gatsby-plugin-react-helmet": "^5.4.0",
     "gatsby-plugin-sharp": "^4.3.0",
     "gatsby-source-filesystem": "^4.3.0",
     "gatsby-transformer-sharp": "^4.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-hot-toast": "^2.1.1",
     "web3": "^1.6.1"
   },
